--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Fastkart">
     <meta name="keywords" content="Fastkart">
     <meta name="author" content="Fastkart">
-    <link rel="icon" href="../assets/images/favicon/7.png" type="image/x-icon">
+    <link rel="icon" href="assets/images/favicon/7.png" type="image/x-icon">
     <title>On-demand last-mile delivery</title>
 
     <!-- Google font -->
@@ -26,18 +26,18 @@
         href="https://fonts.googleapis.com/css2?family=Great+Vibes&amp;family=Qwitcher+Grypen:wght@400;700&amp;display=swap">
 
     <!-- bootstrap css -->
-    <link id="rtl-link" rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+    <link id="rtl-link" rel="stylesheet" type="text/css" href="assets/css/vendors/bootstrap.css">
 
     <!-- wow css -->
-    <link rel="stylesheet" href="../assets/css/animate.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
 
     <!-- Iconly css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/bulk-style.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/animate.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bulk-style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/animate.css">
 
     <!-- Template css -->
-    <link id="color-link" rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <link id="color-link" rel="stylesheet" type="text/css" href="../assets/css/custom.css">
+    <link id="color-link" rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link id="color-link" rel="stylesheet" type="text/css" href="assets/css/custom.css">
 </head>
 
 <body class="theme-color-5">
@@ -96,28 +96,28 @@
                                 <div class="dropdown theme-form-select">
                                     <button class="btn dropdown-toggle" type="button" id="select-language"
                                         data-bs-toggle="dropdown">
-                                        <img src="../assets/images/country/united-states.png"
+                                        <img src="assets/images/country/united-states.png"
                                             class="img-fluid blur-up lazyload" alt="">
                                         <span>English</span>
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-end">
                                         <li>
                                             <a class="dropdown-item" href="javascript:void(0)" id="english">
-                                                <img src="../assets/images/country/united-kingdom.png"
+                                                <img src="assets/images/country/united-kingdom.png"
                                                     class="img-fluid blur-up lazyload" alt="">
                                                 <span>English</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item" href="javascript:void(0)" id="france">
-                                                <img src="../assets/images/country/germany.png"
+                                                <img src="assets/images/country/germany.png"
                                                     class="img-fluid blur-up lazyload" alt="">
                                                 <span>Germany</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item" href="javascript:void(0)" id="chinese">
-                                                <img src="../assets/images/country/turkish.png"
+                                                <img src="assets/images/country/turkish.png"
                                                     class="img-fluid blur-up lazyload" alt="">
                                                 <span>Turki</span>
                                             </a>
@@ -163,7 +163,7 @@
                             </button>
                             <a href="index.html" class="web-logo nav-logo">
                                 <h2>LOGO</h2>
-                                <!-- <img src="../assets/images/logo/6.png" class="img-fluid blur-up lazyload" alt=""> -->
+                                <!-- <img src="assets/images/logo/6.png" class="img-fluid blur-up lazyload" alt=""> -->
                             </a>
 
                             <div class="header-nav-middle">
@@ -325,7 +325,7 @@
                     <div class="slider-animate">
                         <div>
                             <div class="home-contain rounded-0 p-0">
-                                <img src="../assets/images/banner.png"
+                                <img src="assets/images/banner.png"
                                     class="img-fluid" alt="">
                               
                             </div>
@@ -1049,7 +1049,7 @@
                 <div class="row g-md-4 gy-sm-5">
                     <div class="col-xxl-3 col-xl-4 col-sm-6">
                         <a href="index.html" class="foot-logo theme-logo">
-                            <!-- <img src="../assets/images/logo/4.png" class="img-fluid blur-up lazyload" alt=""> -->
+                            <!-- <img src="assets/images/logo/4.png" class="img-fluid blur-up lazyload" alt=""> -->
                             <h2>LOGO</h2>
                         </a>
                         <p class="information-text information-text-2">it is a long established fact that a reader
@@ -1206,19 +1206,19 @@
 
                 <ul class="payment-box">
                     <li>
-                        <img src="../assets/images/icon/paymant/visa.png" class="blur-up lazyload" alt="">
+                        <img src="assets/images/icon/paymant/visa.png" class="blur-up lazyload" alt="">
                     </li>
                     <li>
-                        <img src="../assets/images/icon/paymant/discover.png" alt="" class="blur-up lazyload">
+                        <img src="assets/images/icon/paymant/discover.png" alt="" class="blur-up lazyload">
                     </li>
                     <li>
-                        <img src="../assets/images/icon/paymant/american.png" alt="" class="blur-up lazyload">
+                        <img src="assets/images/icon/paymant/american.png" alt="" class="blur-up lazyload">
                     </li>
                     <li>
-                        <img src="../assets/images/icon/paymant/master-card.png" alt="" class="blur-up lazyload">
+                        <img src="assets/images/icon/paymant/master-card.png" alt="" class="blur-up lazyload">
                     </li>
                     <li>
-                        <img src="../assets/images/icon/paymant/giro-pay.png" alt="" class="blur-up lazyload">
+                        <img src="assets/images/icon/paymant/giro-pay.png" alt="" class="blur-up lazyload">
                     </li>
                 </ul>
             </div>
@@ -1239,7 +1239,7 @@
                     <div class="row g-sm-4 g-2">
                         <div class="col-lg-6">
                             <div class="slider-image">
-                                <img src="../assets/images/product/category/1.jpg" class="img-fluid blur-up lazyload"
+                                <img src="assets/images/product/category/1.jpg" class="img-fluid blur-up lazyload"
                                     alt="">
                             </div>
                         </div>
@@ -1436,7 +1436,7 @@
     <div class="cookie-bar-box">
         <div class="cookie-box">
             <div class="cookie-image">
-                <img src="../assets/images/cookie-bar.png" class="blur-up lazyload" alt="">
+                <img src="assets/images/cookie-bar.png" class="blur-up lazyload" alt="">
                 <h2>Cookies!</h2>
             </div>
 
@@ -1471,7 +1471,7 @@
                             <li class="list-1">
                                 <div class="deal-offer-contain">
                                     <a href="shop-left-sidebar.html" class="deal-image">
-                                        <img src="../assets/images/vegetable/product/10.png" class="blur-up lazyload"
+                                        <img src="assets/images/vegetable/product/10.png" class="blur-up lazyload"
                                             alt="">
                                     </a>
 
@@ -1485,7 +1485,7 @@
                             <li class="list-2">
                                 <div class="deal-offer-contain">
                                     <a href="shop-left-sidebar.html" class="deal-image">
-                                        <img src="../assets/images/vegetable/product/11.png" class="blur-up lazyload"
+                                        <img src="assets/images/vegetable/product/11.png" class="blur-up lazyload"
                                             alt="">
                                     </a>
 
@@ -1499,7 +1499,7 @@
                             <li class="list-3">
                                 <div class="deal-offer-contain">
                                     <a href="shop-left-sidebar.html" class="deal-image">
-                                        <img src="../assets/images/vegetable/product/12.png" class="blur-up lazyload"
+                                        <img src="assets/images/vegetable/product/12.png" class="blur-up lazyload"
                                             alt="">
                                     </a>
 
@@ -1513,7 +1513,7 @@
                             <li class="list-1">
                                 <div class="deal-offer-contain">
                                     <a href="shop-left-sidebar.html" class="deal-image">
-                                        <img src="../assets/images/vegetable/product/13.png" class="blur-up lazyload"
+                                        <img src="assets/images/vegetable/product/13.png" class="blur-up lazyload"
                                             alt="">
                                     </a>
 
@@ -1540,40 +1540,40 @@
     <!-- Bg overlay End -->
 
     <!-- latest jquery-->
-    <script src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
 
     <!-- jquery ui-->
-    <script src="../assets/js/jquery-ui.min.js"></script>
+    <script src="assets/js/jquery-ui.min.js"></script>
 
     <!-- Bootstrap js-->
-    <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/bootstrap/bootstrap-notify.min.js"></script>
-    <script src="../assets/js/bootstrap/popper.min.js"></script>
+    <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap/bootstrap-notify.min.js"></script>
+    <script src="assets/js/bootstrap/popper.min.js"></script>
 
     <!-- feather icon js-->
-    <script src="../assets/js/feather/feather.min.js"></script>
-    <script src="../assets/js/feather/feather-icon.js"></script>
+    <script src="assets/js/feather/feather.min.js"></script>
+    <script src="assets/js/feather/feather-icon.js"></script>
 
     <!-- Lazyload Js -->
-    <script src="../assets/js/lazysizes.min.js"></script>
+    <script src="assets/js/lazysizes.min.js"></script>
 
     <!-- Slick js-->
-    <script src="../assets/js/slick/slick.js"></script>
-    <script src="../assets/js/slick/slick-animation.min.js"></script>
-    <script src="../assets/js/slick/custom_slick.js"></script>
+    <script src="assets/js/slick/slick.js"></script>
+    <script src="assets/js/slick/slick-animation.min.js"></script>
+    <script src="assets/js/slick/custom_slick.js"></script>
 
     <!-- Auto Height Js -->
-    <script src="../assets/js/auto-height.js"></script>
+    <script src="assets/js/auto-height.js"></script>
 
     <!-- WOW js -->
-    <script src="../assets/js/wow.min.js"></script>
-    <script src="../assets/js/custom-wow.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/custom-wow.js"></script>
 
     <!-- script js -->
-    <script src="../assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <!-- theme setting js -->
-    <script src="../assets/js/theme-setting.js"></script>
+    <script src="assets/js/theme-setting.js"></script>
 </body>
 
 
